--- a/fingerprint-struct/Cargo.toml
+++ b/fingerprint-struct/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 digest = { version = "0.10.5", default-features = false }
-fingerprint-struct-derive = { path = "../fingerprint-struct-derive" }
+fingerprint-struct-derive = { version = "0.0.1", path = "../fingerprint-struct-derive" }
 
 [features]
 default = ["std"]
