--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = ["fingerprint-struct", "fingerprint-struct-derive"]
+members = ["fingerprint-struct", "fingerprint-struct-derive", "mock-digest"]
