--- a/fingerprint-struct-derive/Cargo.toml
+++ b/fingerprint-struct-derive/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "fingerprint-struct-derive"
 version = "0.0.1"
+authors = ["Benjamin Swart <Benjaminswart@email.cz>"]
+description = "Derive macro for fingerprint-struct"
+documentation = "https://docs.rs/fingerprint-struct/"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/SvizelPritula/fingerprint-struct"
 edition = "2021"
+rust-version = "1.63"
 
 [dependencies]
 proc-macro2 = "1.0.43"
