Add examples to Cargo.toml

--- a/fingerprint-struct/Cargo.toml
+++ b/fingerprint-struct/Cargo.toml
@@ -44,3 +44,9 @@ name = "custom_impl"
 [[example]]
 name = "derive"
 required-features = ["std", "derive"]
+
+[[example]]
+name = "with_prefix"
+
+[[example]]
+name = "with_version"
